Remove BEM helpers

--- a/packages/nds-core/scss/helpers/_helpers.scss
+++ b/packages/nds-core/scss/helpers/_helpers.scss
@@ -1,2 +1,2 @@
-@import 'helpers-utils', 'helpers-bem', 'helpers-clearfix', 'helpers-focus',
-  'helpers-glyphs', 'helpers-lists', 'helpers-text', 'helpers-visibility';
+@import 'helpers-utils', 'helpers-clearfix', 'helpers-focus', 'helpers-glyphs',
+  'helpers-lists', 'helpers-text', 'helpers-visibility';
