--- a/packages/nds-action-banner/scss/action-banner.scss
+++ b/packages/nds-action-banner/scss/action-banner.scss
@@ -32,7 +32,7 @@ $nds-action-banner-subtle-border: $nds-colour-nice-grey-2;
   background: $nds-action-banner-default-background;
   border: 1px solid $nds-action-banner-default-border;
   color: $nds-colour-text-inverse;
-  margin: em($nds-spacing-large 0);
+  margin: em(0 0 $nds-spacing-large);
   padding: em($nds-spacing-small 0);
   position: relative;
 
