--- a/packages/storybook/stories/grid.stories.scss
+++ b/packages/storybook/stories/grid.stories.scss
@@ -1,4 +1,4 @@
-@import '../scss/core.scss';
+@import '~@nice-digital/nds-core/scss/core';
 
 .grid-example-item {
   background: $nds-colour-nice-grey-3;
