--- a/packages/nds-action-banner/scss/action-banner.scss
+++ b/packages/nds-action-banner/scss/action-banner.scss
@@ -41,11 +41,11 @@ $nds-action-banner-subtle-border: $nds-colour-nice-grey-2;
   }
 
   &__inner {
-    @include nds-grid;
+    //@include nds-grid;
   }
 
   &__text {
-    @include nds-grid-item($middle: true);
+    //@include nds-grid-item($middle: true);
     margin-bottom: em($nds-spacing-medium);
   }
 
@@ -60,7 +60,7 @@ $nds-action-banner-subtle-border: $nds-colour-nice-grey-2;
   }
 
   &__actions {
-    @include nds-grid-item($middle: true);
+    //@include nds-grid-item($middle: true);
 
     .btn {
       margin: 0;
