Update Stacked Nav to `nds` CSS namespace

--- a/packages/nds-stacked-nav/scss/stacked-nav.scss
+++ b/packages/nds-stacked-nav/scss/stacked-nav.scss
@@ -30,8 +30,11 @@
   }
 
   &__hint {
-    color: $colour-text;
+    color: $nds-colour-text;
     display: block;
+    & :active {
+      color: $nds-colour-nice-white;
+    }
   }
 
   &__list {
@@ -74,6 +77,9 @@
     &:active {
       background: $nds-colour-icons;
       color: $nds-colour-link-inverse;
+      span {
+        color: $nds-colour-nice-white;
+      }
     }
   }
 
