--- a/packages/dev-app/src/App.scss
+++ b/packages/dev-app/src/App.scss
@@ -5,3 +5,11 @@ main {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   position: relative;
 }
+
+.grid-example-item {
+  background: $nds-colour-nice-grey-3;
+  border: 0.25em solid $nds-colour-nice-grey-1;
+  margin-bottom: 0.5em;
+  padding: 0.5em;
+  text-align: center;
+}
