--- a/packages/nds-stacked-nav/scss/stacked-nav.scss
+++ b/packages/nds-stacked-nav/scss/stacked-nav.scss
@@ -54,7 +54,8 @@
     position: relative;
     text-decoration: none;
 
-    &[aria-current='true'] {
+    &[aria-current='true'],
+    &[aria-current='page'] {
       background: $nds-colour-nice-grey-3;
       font-weight: bold;
 
