--- a/packages/nds-action-banner/scss/action-banner.scss
+++ b/packages/nds-action-banner/scss/action-banner.scss
@@ -33,19 +33,14 @@ $nds-action-banner-subtle-border: $nds-colour-nice-grey-2;
   border: 1px solid $nds-action-banner-default-border;
   color: $nds-colour-text-inverse;
   margin: em(0 0 $nds-spacing-large);
-  padding: em($nds-spacing-small 0);
+  padding: em($nds-spacing-medium 0);
   position: relative;
 
   &__container {
     @extend %nds-container;
   }
 
-  &__inner {
-    @include nds-grid;
-  }
-
   &__text {
-    @include nds-grid-item($middle: true);
     margin-bottom: em($nds-spacing-medium);
   }
 
@@ -60,8 +55,6 @@ $nds-action-banner-subtle-border: $nds-colour-nice-grey-2;
   }
 
   &__actions {
-    @include nds-grid-item($middle: true);
-
     .btn {
       margin: 0;
 
@@ -125,13 +118,19 @@ $nds-action-banner-subtle-border: $nds-colour-nice-grey-2;
   }
 
   @include mq($from: md) {
+    @include nds-clearfix;
+
     &__text {
       margin-bottom: 0;
       width: percentage(3/4);
     }
 
     &__actions {
+      position: absolute;
+      right: rem($nds-spacing-medium);
       text-align: right;
+      top: 50%;
+      transform: translateY(-50%);
       width: percentage(1/4);
     }
 
@@ -141,7 +140,7 @@ $nds-action-banner-subtle-border: $nds-colour-nice-grey-2;
       }
 
       .action-banner__actions {
-        padding-right: rem($nds-spacing-medium);
+        right: rem($nds-spacing-x-large);
       }
     }
   }
