--- a/packages/nds-tabs/scss/tabs.scss
+++ b/packages/nds-tabs/scss/tabs.scss
@@ -83,7 +83,7 @@
     }
 
     &[aria-selected='true'] {
-      background: $nds-colour-panel-default;
+      background: $nds-colour-nice-grey-3;
       border-left: 1px solid $nds-colour-border;
       border-right: 1px solid $nds-colour-border;
       color: $nds-colour-text;
@@ -107,7 +107,7 @@
     clear: both;
 
     .js & {
-      background: $nds-colour-panel-default;
+      background: $nds-colour-nice-grey-3;
       border: 1px solid $nds-colour-border;
       clear: both;
       padding: rem($nds-spacing-medium);
@@ -116,7 +116,7 @@
 
   // An individual tab content pane
   &__pane {
-    background: $nds-colour-panel-default;
+    background: $nds-colour-nice-grey-3;
     margin-bottom: em($nds-spacing-medium);
     padding: rem($nds-spacing-medium);
 
