--- a/packages/design-system/scss/nice-design-system.scss
+++ b/packages/design-system/scss/nice-design-system.scss
@@ -1,12 +1,19 @@
 @charset 'utf-8';
-
 // Import all the core variables, functions and mixins
-@import '~@nice-digital/nds-core/scss/core';
+@import './base.scss';
 
-// Vendor
-@import '~normalize.css/normalize';
-
-@import 'helpers/helpers', 'layout/layout', 'typography/typography';
-
-// Icons - from nice-icons module
-@import '~@nice-digital/icons/scss/nice-icons';
+@import '~@nice-digital/nds-action-banner/scss/action-banner',
+  '~@nice-digital/nds-breadcrumbs/scss/breadcrumbs',
+  '~@nice-digital/nds-button/scss/button', '~@nice-digital/nds-card/scss/card',
+  '~@nice-digital/nds-checkbox/scss/checkbox',
+  '~@nice-digital/nds-core/scss/core', '~@nice-digital/nds-filters/scss/filters',
+  '~@nice-digital/nds-form-group/scss/form-group',
+  '~@nice-digital/nds-forms/scss/forms', '~@nice-digital/nds-grid/scss/grid',
+  '~@nice-digital/nds-hero/scss/hero',
+  '~@nice-digital/nds-in-page-nav/scss/in-page-nav',
+  '~@nice-digital/nds-maintain-ratio/scss/maintain-ratio',
+  '~@nice-digital/nds-page-header/scss/page-header',
+  '~@nice-digital/nds-panel/scss/panel',
+  '~@nice-digital/nds-phase-banner/scss/phase-banner',
+  '~@nice-digital/nds-stacked-nav/scss/stacked-nav',
+  '~@nice-digital/nds-tabs/scss/tabs', '~@nice-digital/nds-tag/scss/tag';
