Move Hero extra props to children

--- a/packages/nds-filters/scss/filter-panel.scss
+++ b/packages/nds-filters/scss/filter-panel.scss
@@ -48,7 +48,7 @@
   }
 
   &__body {
-    background: $nds-colour-panel-default;
+    background: $nds-colour-nice-grey-3;
     padding: rem($nds-spacing-medium);
 
     &[aria-hidden='true'] {
