NDS-82 Tag type definitions

--- a/packages/nds-core/scss/settings/_settings-colours-semantic.scss
+++ b/packages/nds-core/scss/settings/_settings-colours-semantic.scss
@@ -184,7 +184,7 @@ $nds-colour-beta: #bd5826;
 /// Live badges and banners
 /// @since 0.2.0
 /// @deprecated Use $nds-colour-agile-phase instead
-$nds-colour-live: #70a747;
+$nds-colour-live: #578137;
 
 /// Error text and border colour
 /// @since 0.2.0
