--- a/packages/nds-tag/scss/tag.scss
+++ b/packages/nds-tag/scss/tag.scss
@@ -57,7 +57,7 @@ $nds-tag-border-radius: em($nds-spacing-xx-small);
   }
 
   &--live {
-    background-color: $nds-colour-success;
+    background-color: $nds-colour-live;
   }
 
   &--new {
