NDS-82 Completed tag component (#79)
* NDS-82 Completed tag component

* NDS-82 Tag type definitions

* NDS-82 Tag types

--- a/packages/nds-core/scss/settings/_settings-colours-semantic.scss
+++ b/packages/nds-core/scss/settings/_settings-colours-semantic.scss
@@ -179,12 +179,12 @@ $nds-colour-alpha: #d5367f;
 /// Beta badges and banners
 /// @since 0.2.0
 /// @deprecated Use $nds-colour-agile-phase instead
-$nds-colour-beta: #f47738;
+$nds-colour-beta: #bd5826;
 
 /// Live badges and banners
 /// @since 0.2.0
 /// @deprecated Use $nds-colour-agile-phase instead
-$nds-colour-live: #70a747;
+$nds-colour-live: #578137;
 
 /// Error text and border colour
 /// @since 0.2.0
@@ -196,7 +196,7 @@ $nds-colour-error-background: #eac3c3;
 
 /// Caution text and border colour
 /// @since 0.2.0
-$nds-colour-caution: #9b722f;
+$nds-colour-caution: #966f2f;
 
 /// Caution background colour
 /// @since 0.2.0
@@ -204,7 +204,7 @@ $nds-colour-caution-background: #ffdfa4;
 
 /// Info text and border colour
 /// @since 0.2.0
-$nds-colour-info: #4a7f99;
+$nds-colour-info: #497b94;
 
 /// Info background colour
 /// @since 0.2.0
@@ -212,7 +212,7 @@ $nds-colour-info-background: #e6faff;
 
 /// Success text and border colour
 /// @since 0.2.0
-$nds-colour-success: #3f8c5e;
+$nds-colour-success: #3b8458;
 
 /// Success background colour
 /// @since 0.2.0
