--- a/packages/nds-core/scss/settings/_settings-layout.scss
+++ b/packages/nds-core/scss/settings/_settings-layout.scss
@@ -8,4 +8,4 @@ $nds-container-max-width: 1170;
 
 /// The gutter for the default container
 /// @since 1.0.0
-$nds-container-gutter: $nds-spacing-large;
+$nds-container-gutter: $nds-spacing-medium;
