--- a/components/nds-core/scss/settings/_settings-layout.scss
+++ b/components/nds-core/scss/settings/_settings-layout.scss
@@ -5,3 +5,7 @@
 /// The maximum width of the default container, in pixels
 /// @since 0.5.2
 $nds-container-max-width: 1170;
+
+/// The gutter for the default container
+/// @since 1.0.0
+$nds-container-gutter: $nds-spacing-medium;
