--- a/components/design-system/scss/helpers/_helpers-print.scss
+++ b/components/design-system/scss/helpers/_helpers-print.scss
@@ -10,6 +10,10 @@
   @include nds-hide-print;
 }
 
+.no-appended-print-link {
+  @include nds-no-appended-print-link;
+}
+
 // Printing
 // -------------------------
 // Source: https://github.com/h5bp/html5-boilerplate/blob/master/css/main.css
