--- a/components/nds-stacked-nav/scss/stacked-nav.scss
+++ b/components/nds-stacked-nav/scss/stacked-nav.scss
@@ -8,6 +8,7 @@
 /// Expands to fill the available space.
 /// Usually full width on mobile and 1/3 on wider screens.
 .stacked-nav {
+  @include nds-hide-print;
   background: $nds-colour-nice-white;
   border: 1px solid $nds-colour-border;
   margin: em(0 0 $nds-spacing-large);
@@ -82,9 +83,5 @@
         color: $nds-colour-nice-white;
       }
     }
-  }
-
-  @media print {
-    display: none;
   }
 }
