NDS-85 Amend Hero margin

--- a/components/nds-hero/scss/hero.scss
+++ b/components/nds-hero/scss/hero.scss
@@ -10,7 +10,7 @@
   background: $nds-colour-hero-background;
   color: $nds-colour-text-inverse;
   left: calc(50%);
-  margin-bottom: rem($nds-spacing-medium);
+  margin-bottom: rem($nds-spacing-large);
   margin-left: -50vw;
   margin-right: -50vw;
   overflow: hidden;
