NW-1272 Add filter summary
- Removed redundant imports from root `src` folder
- Corrected negative rem SCSS

--- a/components/design-system/scss/typography/_typography-lists.scss
+++ b/components/design-system/scss/typography/_typography-lists.scss
@@ -45,7 +45,7 @@ ol {
   li,
   .list__item {
     display: inline-block;
-    margin-right: -rem(4);
+    margin-right: rem(-4);
 
     a {
       padding: rem($nds-spacing-small);
