--- a/components/nds-filters/scss/filter-group.scss
+++ b/components/nds-filters/scss/filter-group.scss
@@ -13,6 +13,15 @@
 .filter-group {
   margin-top: rem($nds-spacing-medium);
 
+  legend {
+    @include nds-invisible();
+  }
+
+  fieldset {
+    margin: 0;
+    padding: 0;
+  }
+
   &:first-child {
     margin-top: 0;
   }
@@ -100,7 +109,7 @@
     input {
       float: left;
       height: rem($nds-spacing-medium);
-      margin-left: -rem($nds-spacing-medium + $nds-spacing-small);
+      margin-left: rem(-($nds-spacing-medium + $nds-spacing-small));
       margin-top: rem($nds-spacing-xx-small);
       width: rem($nds-spacing-medium);
 
