--- a/components/nds-filters/scss/filter-panel.scss
+++ b/components/nds-filters/scss/filter-panel.scss
@@ -5,45 +5,63 @@
 @import '~@nice-digital/nds-core/scss/core';
 @import '~@nice-digital/icons/scss/nice-icons';
 
+@mixin _filter-panel-heading-button {
+  cursor: pointer;
+
+  &:after {
+    @include nice-icon(chevron-up);
+    @include nds-font-size(-1);
+    color: $nds-colour-icons;
+    margin-top: rem(-$nds-spacing-small);
+    position: absolute;
+    right: rem($nds-spacing-small);
+    top: 50%;
+  }
+
+  &[aria-expanded='false']:after {
+    content: nice-icon(chevron-down);
+  }
+
+  &:visited,
+  &:hover,
+  &:active,
+  &:focus {
+    color: $nds-colour-text;
+  }
+
+  &:focus {
+    @include nds-default-focus-style;
+  }
+}
+
 .filter-panel {
   margin: rem(0 0 $nds-spacing-medium 0);
 
   // Heading can be one of:
   // - heading for server side rendering for non-js
   // - button to collapse/expand filter panel client side
+  // - anchor if you're progressively enhancing
   &__heading {
     @include nds-font-size(h5);
+    appearance: none;
     background: $nds-colour-nice-grey-2;
     border: 0;
+    color: $nds-colour-text;
     display: block;
     font-weight: bold;
     margin: 0;
     padding: rem($nds-spacing-small);
     position: relative;
     text-align: left;
+    text-decoration: none;
     width: 100%;
 
     @include nds-when-is(button) {
-      appearance: none;
-      cursor: pointer;
+      @include _filter-panel-heading-button;
+    }
 
-      &:after {
-        @include nice-icon(chevron-up);
-        @include nds-font-size(-1);
-        color: $nds-colour-icons;
-        margin-top: rem(-$nds-spacing-small);
-        position: absolute;
-        right: rem($nds-spacing-small);
-        top: 50%;
-      }
-
-      &[aria-expanded='false']:after {
-        content: nice-icon(chevron-down);
-      }
-
-      &:focus {
-        @include nds-default-focus-style;
-      }
+    @include nds-when-is(a) {
+      @include _filter-panel-heading-button;
     }
   }
 
@@ -67,6 +85,12 @@
       padding: 0;
 
       @include nds-when-is(button) {
+        &:after {
+          display: none;
+        }
+      }
+
+      @include nds-when-is(a) {
         &:after {
           display: none;
         }
