--- a/components/nds-filters/scss/filters.scss
+++ b/components/nds-filters/scss/filters.scss
@@ -1,1 +1,1 @@
-@import 'filter-panel', 'filter-group', 'filter-summary';
+@import 'filter-panel', 'filter-group', 'filter-option', 'filter-summary';
