NDS-90 FIx bug with filter panel heading styling
Filter panel heading can be a button or an heading with
an anchor or button inside. This fixes broken styling on
desktop for the case where the panel heading is a button

--- a/components/nds-filters/scss/filter-panel.scss
+++ b/components/nds-filters/scss/filter-panel.scss
@@ -95,6 +95,15 @@
           display: none;
         }
       }
+
+      @include nds-when-is(a, button) {
+        background: none;
+        padding: 0;
+
+        &:after {
+          display: none;
+        }
+      }
     }
 
     &__body {
