--- a/components/nds-filters/scss/filter-panel.scss
+++ b/components/nds-filters/scss/filter-panel.scss
@@ -5,45 +5,65 @@
 @import '~@nice-digital/nds-core/scss/core';
 @import '~@nice-digital/icons/scss/nice-icons';
 
+@mixin _filter-panel-heading-button {
+  @include nds-font-size(h5);
+  appearance: none;
+  background: $nds-colour-nice-grey-2;
+  border: 0;
+  color: $nds-colour-text;
+  cursor: pointer;
+  display: block;
+  font-weight: bold;
+  padding: rem($nds-spacing-small);
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  width: 100%;
+
+  &:after {
+    @include nice-icon(chevron-up);
+    @include nds-font-size(-1);
+    color: $nds-colour-icons;
+    margin-top: rem(-$nds-spacing-small);
+    position: absolute;
+    right: rem($nds-spacing-small);
+    top: 50%;
+  }
+
+  &[aria-expanded='false']:after {
+    content: nice-icon(chevron-down);
+  }
+
+  &:visited,
+  &:hover,
+  &:active,
+  &:focus {
+    color: $nds-colour-text;
+  }
+
+  &:focus {
+    @include nds-default-focus-style;
+  }
+}
+
 .filter-panel {
   margin: rem(0 0 $nds-spacing-medium 0);
 
   // Heading can be one of:
   // - heading for server side rendering for non-js
   // - button to collapse/expand filter panel client side
+  // - anchor if you're progressively enhancing
   &__heading {
-    @include nds-font-size(h5);
-    background: $nds-colour-nice-grey-2;
-    border: 0;
-    display: block;
-    font-weight: bold;
     margin: 0;
-    padding: rem($nds-spacing-small);
-    position: relative;
-    text-align: left;
-    width: 100%;
+    padding: 0;
 
-    @include nds-when-is(button) {
-      appearance: none;
-      cursor: pointer;
+    a,
+    button {
+      @include _filter-panel-heading-button;
+    }
 
-      &:after {
-        @include nice-icon(chevron-up);
-        @include nds-font-size(-1);
-        color: $nds-colour-icons;
-        margin-top: rem(-$nds-spacing-small);
-        position: absolute;
-        right: rem($nds-spacing-small);
-        top: 50%;
-      }
-
-      &[aria-expanded='false']:after {
-        content: nice-icon(chevron-down);
-      }
-
-      &:focus {
-        @include nds-default-focus-style;
-      }
+    @include nds-when-is(a, button) {
+      @include _filter-panel-heading-button;
     }
   }
 
@@ -66,7 +86,20 @@
       margin-bottom: rem($nds-spacing-medium);
       padding: 0;
 
-      @include nds-when-is(button) {
+      a,
+      button {
+        background: none;
+        padding: 0;
+
+        &:after {
+          display: none;
+        }
+      }
+
+      @include nds-when-is(a, button) {
+        background: none;
+        padding: 0;
+
         &:after {
           display: none;
         }
