NDS-92 Input component (#105)
* Forms Storybook story

* Add nds-forms stories

* NDS-92 Add initial scaffold

* NDS-92 Remove input from forms package

* NDS-92 Add Input component

* NDS-92 Typo

* NDS-92 Add nds-input to design-system package

* NDS-92 Add styling amends & defaultValue prop

* NDS-92 Type refinement

--- a/components/nds-input/scss/input.scss
+++ b/components/nds-input/scss/input.scss
@@ -1,3 +1,7 @@
+////
+/// @group components
+////
+
 @import '~@nice-digital/nds-core/scss/core';
 
 .input {
@@ -7,7 +11,19 @@
     @include nds-font-size(p);
     display: block;
     font-weight: bold;
-    margin-bottom: rem($nds-spacing-x-small);
+    margin-bottom: rem($nds-spacing-small);
+  }
+
+  &__hint {
+    margin-bottom: rem($nds-spacing-small);
+    margin-top: 0;
+  }
+
+  &__error {
+    color: $nds-colour-error;
+    font-weight: bold;
+    margin-bottom: rem($nds-spacing-small);
+    margin-top: 0;
   }
 
   &__input {
@@ -20,7 +36,9 @@
     }
   }
 
-  &--error .input__input {
-    @include nds-default-error-style;
+  &--error {
+    .input__input {
+      @include nds-default-error-style;
+    }
   }
 }
